Added more setup and created configurations which are still in test more -28/05/2025

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["asics", "breguet", "burberrys", "gabbana"]
+  "cSpell.words": [
+    "asics",
+    "breguet",
+    "burberrys",
+    "clonned",
+    "gabbana",
+    "scroller"
+  ]
 }
